// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Image should render Default 1`] = `
<DocumentFragment>
  <img
    alt="DSC07717"
    class="emotion-0 emotion-1"
    loading="lazy"
    sizes="(max-width: 400px) 200w,
(max-width: 600px) 300w,
(max-width: 1000px) 500w,
(max-width: 1600px) 800w,
(max-width: 2000px) 1000w,
1200w"
    srcset="https://unsplash.it/1200/400 1200w,
https://unsplash.it/1000/400 1000w,
https://unsplash.it/800/400 800w,
https://unsplash.it/500/300 500w,
https://unsplash.it/300/200 300w,
https://unsplash.it/200/100 200w"
    title=""
  />
</DocumentFragment>
`;

exports[`Image should render Square 1`] = `
<DocumentFragment>
  <img
    alt="DSC07717"
    class="emotion-0 emotion-1"
    loading="lazy"
    sizes="(max-width: 400px) 200w,
(max-width: 600px) 300w,
(max-width: 1000px) 500w,
(max-width: 1600px) 800w,
(max-width: 2000px) 1000w,
1200w"
    srcset="https://unsplash.it/1200/1200 1200w,
https://unsplash.it/1000/1000 1000w,
https://unsplash.it/800/800 800w,
https://unsplash.it/500/500 500w,
https://unsplash.it/300/300 300w,
https://unsplash.it/200/200 200w"
    title=""
  />
</DocumentFragment>
`;

exports[`Image should render WithMaxWidth 1`] = `
<DocumentFragment>
  <img
    alt="DSC07717"
    class="emotion-0 emotion-1"
    loading="lazy"
    sizes="(max-width: 400px) 200w,
(max-width: 600px) 300w,
(max-width: 1000px) 500w,
(max-width: 1600px) 800w,
(max-width: 2000px) 1000w,
1200w"
    srcset="https://unsplash.it/200/100 200w"
    title=""
  />
</DocumentFragment>
`;

exports[`Image should render WithoutDescription 1`] = `
<DocumentFragment>
  <img
    alt="DSC07717"
    class="emotion-0 emotion-1"
    loading="lazy"
    sizes="(max-width: 400px) 200w,
(max-width: 600px) 300w,
(max-width: 1000px) 500w,
(max-width: 1600px) 800w,
(max-width: 2000px) 1000w,
1200w"
    srcset="https://unsplash.it/1200/400 1200w,
https://unsplash.it/1000/400 1000w,
https://unsplash.it/800/400 800w,
https://unsplash.it/500/300 500w,
https://unsplash.it/300/200 300w,
https://unsplash.it/200/100 200w"
    title=""
  />
</DocumentFragment>
`;

exports[`Image should render WithoutTitle 1`] = `
<DocumentFragment>
  <img
    alt="DSC07717"
    class="emotion-0 emotion-1"
    loading="lazy"
    sizes="(max-width: 400px) 200w,
(max-width: 600px) 300w,
(max-width: 1000px) 500w,
(max-width: 1600px) 800w,
(max-width: 2000px) 1000w,
1200w"
    srcset="https://unsplash.it/1200/400 1200w,
https://unsplash.it/1000/400 1000w,
https://unsplash.it/800/400 800w,
https://unsplash.it/500/300 500w,
https://unsplash.it/300/200 300w,
https://unsplash.it/200/100 200w"
    title=""
  />
</DocumentFragment>
`;
